# todoem-BE

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  docker-compose.yml
postgres/: Dockerfile  postgresql.conf
src/: config.rs  main.rs
src/db/migrations/: 1_init.sql  1_init.up.sql  2_data.down.sql  2_data.up.sql
src/db/query/: mod.rs  task.rs  user.rs
src/errors/: mod.rs
src/handlers/: list.rs  mod.rs  task.rs  user.rs
src/handlers/types/: list.rs  mod.rs  task.rs  user.rs
src/middlewares/: jwt.rs
src/models/: group.rs  list.rs  lists.rs  mod.rs  task.rs  tasks.rs  user.rs  users.rs
src/routes/: list.rs  mod.rs  task.rs  user.rs  users.rs
tests/: client.rs  ids.txt
