[package]
name = "todoem"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
serde = "1.0.203"
serde_json = "1.0.117"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["cors", "trace"]}
http = "1.1.0"
chrono = {version = "0.4.38", features = ["serde"]}
jsonwebtoken = "9.3.0"
axum-extra = {version = "0.9.3", features = ["cookie"]}
